fix: panel alignment

--- a/frontend/assets/css/text-viewer2.scss
+++ b/frontend/assets/css/text-viewer2.scss
@@ -37,7 +37,8 @@
   -o-transition: $args;
   transition: $args;
 }
-
+.container.is-fluid{max-width: 1344px;
+}
 //* 2. MAIN *//
 section#text-viewer {
   //overflow: hidden;
@@ -53,7 +54,6 @@ section#text-viewer {
     @include transition(all 300ms ease-in);
     display: flex;
     justify-content: center;
-
     > .panel {
       border: 1px solid $gray-dark;
       width: 100%;
@@ -244,7 +244,7 @@ section#text-viewer {
     } //&:checked ~ #drawer
 
     &:checked ~ .panel-wrapper {
-      margin-right: 30%;
+      margin-right: 500px;
       #drawer-toggle {
         /* MENU TOGGLE ICON - close */
         /*&:before {
@@ -934,7 +934,6 @@ $render-sic: false;
 #text-viewer .panel-chunk {
   overflow: scroll;
   height: calc(90vh - 120px);
-  margin-top: 23px;
 }
 
 #text-viewer {
@@ -942,6 +941,7 @@ $render-sic: false;
   .tei-type-stanza {
     margin-bottom: $edition-line-height;
     display: block;
+    max-width: 800px;
   }
 
   span[data-tei-rend~="italic"] {
@@ -991,7 +991,7 @@ $render-sic: false;
   padding-top: $edition-line-height;
   padding-bottom: calc($edition-line-height * 2);
   position: relative;
-
+  padding: 0 5em 0 0;
   opacity: 30%;
 
   &.loaded {
@@ -1256,6 +1256,7 @@ $render-sic: false;
 
   .tei-list {
     display: block;
+    max-width: 80%;
 
     .tei-item {
       // doesn't work in FF
